package app.viewer;

public interface ImageViewer {

    void image(String typeFile, String nameFile);
}
