package app.viewer;

public interface Viewer {

    void viewerPdf(String nameFile);

    void viewerPng(String nameFile);
}

